force-app/main/default/objects/Ativo__c/Ativo__c.object-meta.xml
<CustomObject>
    <description>Ativo Financeiro</description>
    <label>Ativo</label>
    <nameField>
        <label>Código do Ativo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ativos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>