force-app/main/default/objects/Ativo__c/fields/CotacaoAtual__c.field-meta.xml
<CustomField>
    <fullName>CotacaoAtual__c</fullName>
    <description>Cotação Atual do Ativo no Mercado</description>
    <inlineHelpText>Cotação Atual do Ativo no Mercado</inlineHelpText>
    <label>Cotação Atual</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>