force-app/main/default/objects/Ativo__c/fields/NomeAtivo__c.field-meta.xml
<CustomField>
    <fullName>NomeAtivo__c</fullName>
    <description>Nome do Ativo Financeiro</description>
    <inlineHelpText>Nome do Ativo Financeiro</inlineHelpText>
    <label>Nome do Ativo</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>