force-app/main/default/objects/Ativo__c/fields/TipoAtivo__c.field-meta.xml
<CustomField>
    <fullName>TipoAtivo__c</fullName>
    <label>Tipo de Ativo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ação Nacional</fullName>
            </value>
            <value>
                <fullName>Ação Internacional</fullName>
            </value>
            <value>
                <fullName>Fundo Imobiliário</fullName>
            </value>
            <value>
                <fullName>Fundo de Investimentos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>